<resources>
    <string name="app_name">To Do App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_event">Create new event</string>
    <string name="confirm">Confirm</string>
    <string name="enter_priority">Enter priority</string>
    <string name="priority">Priority</string>
    <string name="dateDescriptionText">Enter date</string>
    <string name="dateInputText">Date</string>
    <string name="eventTitle">Enter event title</string>
    <string name="eventTitleText">Title</string>
    <string name="eventDescriptionText">Enter event description</string>
    <string name="eventDescription">Event description</string>
    <string name="add_new_event">Add new event</string>
    <string name="event_list">Event List</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
</resources>
